src/test/deca/context/invalid/renduInitial/00undefvar.res
Exception in thread "main" java.lang.UnsupportedOperationException: not yet implemented
	at fr.ensimag.deca.CompilerOptions.parseArgs(CompilerOptions.java:70)
	at fr.ensimag.deca.DecacMain.main(DecacMain.java:21)
